# universal-api

./: .env  .gitignore  README.md  Taskfile.yml  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json  universal-api.code-workspace
migrations/: env.py
migrations/versions/: 0001_create_message_table.py  0001_create_messages_table.py  0002_create_map_state_table.py
src/app/: main.py
src/app/api/: api.py
src/app/api/routes/: healthcheck.py  map_states.py  messages.py  profile.py
src/app/auth/: keycloak.py  oidc_user.py
src/app/core/: logging.py  settings.py
src/app/db/: alembic.py  base.py  migrations.py  session.py
src/app/db/entities/: __init__.py  map_state.py  message.py
src/app/extensions/: logging_middleware.py  powered_by_middleware.py
src/app/schemas/: healthcheck.py  message.py
src/app/services/: health_service.py  map_state_service.py  message_service.py
src/app/utils/: license.py  project.py  shell.py  timezone.py
tasks/: test.yml
tests/: conftest.py
tests/api/: test_health_api.py  test_map_states_api.py  test_messages_api.py  test_profile_api.py
tests/core/: test_settings.py
tests/db/: test_health_dao.py  test_health_repository.py  test_map_states_dao.py  test_map_states_repository.py  test_message_dao.py  test_message_repository.py  test_messages_dao.py  test_messages_repository.py
tests/resources/: .env.sqlite.test  .env.test
tests/services/: test_health_service.py  test_map_states_service.py  test_messages_service.py
tests/unit/: test_settings.py
tests/utils/: test_licenses.py
typings/: fastapi_keycloak_middleware.pyi
typings/fastapi_keycloak_middleware/: __init__.pyi  exceptions.pyi  fast_api_user.pyi  keycloak_backend.pyi  middleware.pyi  setup.pyi
typings/fastapi_keycloak_middleware/decorators/: require_permission.pyi  strip_request.pyi
typings/fastapi_keycloak_middleware/dependencies/: check_permission.pyi  get_auth.pyi  get_authorization_result.pyi  get_user.pyi
typings/fastapi_keycloak_middleware/schemas/: authorization_methods.pyi  authorization_result.pyi  exception_response.pyi  keycloak_configuration.pyi  match_strategy.pyi
(+21 files in other folders)
